# blockchain-study

./: Cargo.toml  README.md
src/: block.rs  config.rs  connection.rs  constants.rs  errors.rs  events.rs  http.rs  lib.rs  main.rs  payload.rs  routes.rs  secp256k1.rs  socket.rs  transaction.rs  transaction_pool.rs  utils.rs  wallet.rs
wallet/: private_key  private_key2
