[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustop = "1.1"
sha2 = "0.10"
chrono = "0.4"
validator = "0.15.0"
validator_derive = "0.15.0"
rocket = "0.4"
rocket_cors = "0.5"
rocket_contrib = "0.4"
url = "2.2"
secp256k1 = "0.23"

[dependencies.tokio]
version = "1.19"
default-features = false
features = ["io-util", "macros", "time", "sync", "net", "rt-multi-thread"]

[dependencies.tokio-tungstenite]
version = "0.17"
default-features = false
features = ["connect"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.uuid]
version = "1.1"
features = ["v4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
